# agent-hub

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README.zh-CN.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: pages.yml  test.yml
docs/: agent-driven-usage.md  architecture.md  cli-quick-reference.md  demo.html  demo.md  demo.zh.html  handoff-notes.md  index.html  index.zh.html  license-recommendation.md  oss-repo-prep.md  oss-split-plan.md  public-launch-checklist.md  public-repo-commands.md  release-checklist.md  release-notes-v0.1.0.md  safety.md
examples/: agent-driven-projects.example.json  env.example  projects.example.json
examples/demo-agent-repo/: README.md
examples/demo-agent-repo/scripts/: run_agent_task.sh
src/agent_hub/: __init__.py  __main__.py  cli.py  db.py  dispatcher.py  models.py  projects.py  repository.py  web.py
src/agent_hub/config/: __init__.py
src/agent_hub/core/: __init__.py
src/agent_hub/services/: __init__.py  executors.py  pipelines.py  task_templates.py
tests/: test_cli.py  test_config_projects.py  test_pipelines.py  test_repository.py  test_task_templates.py  test_web.py
